Related components flexability + fix of gaps for principles

--- a/src/storybook/components/related-components/related-components.scss
+++ b/src/storybook/components/related-components/related-components.scss
@@ -1,9 +1,7 @@
-@import "../../../styles/global-css-settings";
-@import "../../styles/content-spacing";
-
 .monday-storybook-related-components {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-  grid-gap: $spacing-large;
   width: 100%;
+
+  &_component-data {
+    width: 320px;
+  }
 }
